tests/snapshots/cli_help__cli_help_playlist_tracks.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Print playlist tracks

Usage: spotuify playlist tracks [OPTIONS] <PLAYLIST>

Arguments:
  <PLAYLIST>  Playlist ID, URI, or exact name

Options:
      --format <FORMAT>  Output format [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
