tests/snapshots/cli_help__cli_help_previous.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Skip to the previous track

Usage: spotuify previous [OPTIONS]

Options:
      --format <FORMAT>  Output format for the mutation receipt [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
