tests/snapshots/cli_help__cli_help_radio_start.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Start a station seeded by a track/artist/album/playlist URI. By default it queues the resolved tracks onto the active device

Usage: spotuify radio start [OPTIONS] <SEED>

Arguments:
  <SEED>  Seed URI (`spotify:track:…`, `spotify:artist:…`, etc.)

Options:
      --dry-run                  Resolve and print the station without queueing anything
      --log-format <LOG_FORMAT>  Phase 13 (P13-A) — pick the daemon log format for this run. Also honoured via `SPOTUIFY_LOG_FORMAT` [possible values: text, json]
      --format <FORMAT>          [default: table] [possible values: table, json, jsonl, csv, ids]
      --no-daemon-start          Phase 13 (P13-H) — if set, the CLI never auto-starts the daemon. Errors with a clear hint when the daemon socket is missing
  -o, --set <key.path=value>     Phase 13 (P13-H) — one-shot TOML override (e.g. `-o player.bitrate=160`). Repeatable. Applies for this invocation only; the config file on disk is unchanged
  -h, --help                     Print help
