tests/snapshots/cli_help__cli_help_reindex.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Rebuild the local search index from SQLite cache

Usage: spotuify reindex [OPTIONS]

Options:
      --format <FORMAT>  Output format [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
